codama-macros/tests/codama_attribute/on_any_item.fail.stderr
error: node is missing
 --> tests/codama_attribute/on_any_item.fail.rs:3:10
  |
3 | #[codama(node())]
  |          ^^^^^^

error: node is missing
 --> tests/codama_attribute/on_any_item.fail.rs:6:10
  |
6 | #[codama(node())]
  |          ^^^^^^

error: node is missing
 --> tests/codama_attribute/on_any_item.fail.rs:9:10
  |
9 | #[codama(node())]
  |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:12:10
   |
12 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:15:10
   |
15 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:18:10
   |
18 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:21:10
   |
21 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:24:10
   |
24 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:27:10
   |
27 | #[codama(node())]
   |          ^^^^^^

error: node is missing
  --> tests/codama_attribute/on_any_item.fail.rs:32:10
   |
32 | #[codama(node())]
   |          ^^^^^^
